# image-converter

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  dot_env_example  pyproject.toml
src/: converter.py  main.py  utils.py
src/schema/: input.py
src/tests/: test_main.py
