[tool.poetry]
name = "imageconverter"
version = "0.1.0"
description = "A service that converts images via contourification and color shifting to simplified images" 
authors = ["Thomas van Erven"]

[tool.poetry.dependencies]
python = "^3.10.15"
uvicorn = "^0.31.0"
pydantic = "^2.9.0"
fastapi = "^0.115.0"
requests = "^2.32.0"
coverage = "^7.6.0"
scikit-image = "^0.24.0"
opencv-python = "^4.10.0.84"
numpy = "^2.1.3"
python-multipart = "^0.0.17"
pyvista = "^0.44.1"
trimesh = "^4.5.2"
scipy = "^1.14.1"
fast-simplification = "^0.1.9"
httpx = "^0.28.1"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^23.7.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
